# coinz

./: .gitignore  README.md  coinz.code-workspace
backend/: .gitignore  README.md  pyproject.toml
backend/coinz_backend/: Procfile  manage.py  railway.json  requirements.txt  vercel.json
backend/coinz_backend/coinz_api/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/coinz_backend/coinz_api/fixtures/: category.json  currency.json  currencyConversion.json
backend/coinz_backend/coinz_api/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_category_type.py  0004_alter_currencyconversion_updated_at.py  0005_alter_recurringbill_ledger_alter_transaction_ledger_and_more.py  0006_transaction_date.py  0007_rename_interval_days_recurringbill_interval_amount_and_more.py  0008_currency_precision.py  0009_usersettings_display_currency_and_more.py
backend/coinz_backend/coinz_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/coinz_backend/import_transactions/: import_1secmoney_data.py
backend/docs/: db_schema.dbml
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ActiveLink.tsx  AddLedgerDialog.tsx  AddTransactionForm.tsx  Counter.tsx  DeleteTransactionAlertDialog.tsx  Navbar.tsx  NextAuthProvider.tsx  PieChart.tsx  SegmentAnalytics.tsx  StoreProvider.tsx  TransactionsDataTable.tsx  TransactionsTable.tsx  UpdateLedgerFormDialog.tsx  UpdateTransactionDialog.tsx  UpdateTransactionForm.tsx  (+1 more)
(+29 files in other folders)
