[tool.poetry]
name = "coinz-backend"
version = "0.1.0"
description = ""
authors = ["Eason Chang <eason@easonchang.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
django-cors-headers = "^4.3.1"
drf-spectacular = "^0.27.1"
djangorestframework-simplejwt = "^5.3.1"
django-allauth = "0.57.0"
dj-rest-auth = {extras = ["with-social"], version = "^5.0.2"}
djangorestframework = "^3.15.1"
psycopg = {extras = ["binary"], version = "^3.1.18"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
